[project]
name = "sg-bus"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
]

[tool.flet]
org = "com.mycompany"
product = "sg-bus"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
